// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should NOT have the pointer class if onClick is not specified 1`] = `
.emotion-0 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-3 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

<div>
  <table
    class="emotion-0"
  >
    <tbody
      class="emotion-1"
    >
      <tr
        class="emotion-1"
      >
        <td
          class="emotion-3"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableRow should accept the style prop 1`] = `
.emotion-0 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-2 {
  color: red;
}

.emotion-3 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

<div>
  <table
    class="emotion-0"
  >
    <tbody
      class="emotion-1"
    >
      <tr
        class="emotion-2"
      >
        <td
          class="emotion-3"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableRow should have the pointer class if onClick is specified 1`] = `
.emotion-0 {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #D3D4DD;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-3 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
}

<div>
  <table
    class="emotion-0"
  >
    <tbody
      class="emotion-1"
    >
      <tr
        class="emotion-2"
      >
        <td
          class="emotion-3"
        >
          Test
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
